# cocoro_ghost

./: .gitignore  AGENTS.md  README.md  build.bat  check_sqlite.py  cocoro_ghost_windows.spec  pyproject.toml  run.py  run_worker.py  setup.bat  start.bat
.github/: copilot-instructions.md
cocoro_ghost/: __init__.py  cleanup.py  config.py  db.py  defaults.py  deps.py  desktop_watch.py  entrypoint.py  event_stream.py  fact_policy.py  internal_worker.py  llm_client.py  llm_debug.py  llm_schemas.py  log_stream.py  logging_config.py  main.py  memory.py  memory_pack_builder.py  models.py  mood.py  mood_runtime.py  otome_kairo.py  otome_kairo_runtime.py  partner_mood.py  partner_mood_runtime.py  paths.py  periodic.py  persona_mood.py  persona_mood_runtime.py  prompts.py  reflection.py  reminders_db.py  reminders_logic.py  reminders_models.py  reminders_repo.py  reminders_service.py  retriever.py  scheduler.py  schemas.py  (+6 more)
cocoro_ghost/api/: __init__.py  admin.py  capture.py  chat.py  episodes.py  events.py  logs.py  mood.py  (+9 more)
config/: ghost.toml.example  setting.toml.example  setting.toml.release
docs/: README.md  api.md  architecture.md  bootstrap.md  cocoro_ghost_api.md  cocoro_ghost_design.md  cocoro_ghost_prompts.md  db_schema.md  implementation_plan.md  memory_pack_builder.md  mood.md  otome_kairo.md  partner_mood.md  persona_mood.md  prompt_usage_map.md  prompts.md  reminders.md  retrieval.md  retrieval_fastpath.md  scheduler.md  settings_db.md  sqlite_vec.md  structured_outputs_and_meta_design_notes.md  vision.md  worker.md  ログ解析用資料.md  要件定義.md
tests/: test_api.py
(+15 files in other folders)
