[project]
name = "cocoro-ghost"
version = "0.1.0"
description = "CocoroAI core (cocoro_ghost)"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "fastapi-utils",
  "uvicorn[standard]",
  "sqlalchemy",
  "litellm",
  "pydantic",
  "python-multipart",
  "httpx",
  "tomli",
  "sqlite-vec",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
