[project]
name = "cocoro-ghost"
version = "0.1.0"
description = "CocoroAI core (CocoroGhost)"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "fastapi-utils",
  "uvicorn[standard]",
  "sqlalchemy",
  "litellm",
  "pydantic",
  "python-multipart",
  "httpx",
  "tomli",
  "sqlite-vec==0.1.6",
  "typing_inspect",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cocoro_ghost"]
